--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,15 @@ a {
 td.tense {
     text-align: right;
 }
+body {
+    text-align: center;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 </style>
 </head>
 <body>
@@ -27,6 +36,15 @@ td.tense {
 <tr><td class="tense">tense</td><td>conjugation</td><td>pronunciation</td></tr>
 </thead>
 <tbody>
+<tr>
+    <td class="tense">infinitive</td>
+    <td>
+        <form id="infinitive-form" action="." method="get">
+        <input name="infinitive" size="10" value="{{ infinitive }}">
+        </form>
+    </td>
+    </td>
+</tr>
 {% for (tense, conjugation, pronunciation, reasons) in results %}
 <tr>
     <td class="tense">{{ tense  }}</td> 
