--- a/templates/index.html
+++ b/templates/index.html
@@ -62,5 +62,16 @@ table {
 </tr>
 {% endfor %}
 </table>
+<script type="text/javascript"><!--
+google_ad_client = "pub-2323396850941501";
+/* korean verbs */
+google_ad_slot = "8477612575";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </body>
 </html>
