--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ table {
 </style>
 </head>
 <body>
-
+<form id="infinitive-form" action="." method="get">
 <table>
 <thead>
 <tr><td class="tense">tense</td><td>conjugation</td><td>pronunciation</td></tr>
@@ -38,12 +38,8 @@ table {
 <tbody>
 <tr>
     <td class="tense">infinitive</td>
-    <td>
-        <form id="infinitive-form" action="." method="get">
-        <input name="infinitive" size="10" value="{{ infinitive }}">
-        </form>
-    </td>
-    </td>
+    <td><input name="infinitive" size="10" value="{{ infinitive }}"></td>
+    <td><input type="submit" value="conjugate"></td>
 </tr>
 {% for (tense, conjugation, pronunciation, reasons) in results %}
 <tr>
@@ -62,6 +58,7 @@ table {
 </tr>
 {% endfor %}
 </table>
+ </form>
 <script type="text/javascript"><!--
 google_ad_client = "pub-2323396850941501";
 /* korean verbs */
