--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@ table {
 </head>
 <body>
 <p>dongsa.net shows you how to conjugate and pronounce Korean verbs</p>
+<p>I have a detailed explanation of what I learned while working on this project in my <a href="http://dan.bravender.us/2009/6/28/Announcing_dongsa.net.html">blog entry announcing the site</a>.</p>
 <p>Give these a try: {{ samples }}.</p> 
 <form id="infinitive-form" action="." method="get">
 <table>
