Added a title (doh) and made the infinitive always end with "다"

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>dongsa.net - {{infinitive}}</title>
 <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
 <script type="text/javascript">
 function toggle(e) {
