--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>dongsa.net - {{infinitive}}</title>
+<meta name="verify-v1" content="nfSbiOgPUnEWsQ8h5APnRPOxK0HWpZtiMMHZZ+oaIZ4=" >
 <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
 <script type="text/javascript">
 function toggle(e) {
