Added links to some sites

--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -67,6 +67,7 @@ table {
 {% endfor %}
 </table>
  </form>
+<p>Be sure to check out <a href="http://ezcorean.com">ezcorean.com</a> and <a href="http://www.koreanwikiproject.com/wiki/index.php?title=Hangeul_Assistant">Hangeul assistant</a>.</p>
 <p>The source code for this website and the corresponding Korean conjugation and pronunciation modules are available at <a href="http://github.com/dbravender/korean_conjugation/tree/master">github</a>.</p>
 <p>&copy;{{ year }} <a href="http://dan.bravender.us">Dan Bravender</a>. Please contact me if you have discovered a bug: <script type="text/javascript">
 
