Made the explanations of irregulars more complete

--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -41,7 +41,7 @@ table {
 </style>
 </head>
 <body>
-<p>dongsa.net shows you how to conjugate and pronounce Korean verbs</p>
+<p>dongsa.net shows you how to conjugate and pronounce Korean verbs.</p>
 <p>More information can be found at my <a href="http://dan.bravender.us/2009/6/28/Announcing_dongsa.net.html">blog entry announcing the site</a>.</p>
 <form id="infinitive-form" action="." method="get">
 {% if both_regular_and_irregular %}
@@ -50,7 +50,7 @@ The verb "{{ infinitive }}" has both regular and irregular forms depending on it
 </div>
 {% else %}
 <div class="type">
-{{ infinitive }} is a {{ verb_type }} verb
+{{ infinitive }} is a {{ verb_type }}.
 </div>
 {% endif %}
 <table>
