--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -22,6 +22,7 @@ td.tense {
 }
 body {
     text-align: center;
+    margin-right: 200px;
 }
 
 table {
@@ -31,7 +32,10 @@ table {
 
 </style>
 </head>
-<body>
+<body onscroll="$('#azn_srch')[0].style.top = $(document.body).scrollTop() > 200 ? $(document.body).scrollTop() : 200;">
+<div id="azn_srch" style="position: absolute; right: 0; top: 200px; margin-right: 10px;">
+<SCRIPT charset="utf-8" type="text/javascript" src="http://ws.amazon.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822/US/httpthebestbo-20/8002/a36d5a6f-bcb9-4db9-bf55-078d3b0958d0"> </SCRIPT> <NOSCRIPT><A HREF="http://ws.amazon.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Fhttpthebestbo-20%2F8002%2Fa36d5a6f-bcb9-4db9-bf55-078d3b0958d0&Operation=NoScript">Amazon.com Widgets</A></NOSCRIPT>
+</div>
 <p>dongsa.net shows you how to conjugate and pronounce Korean verbs</p>
 <p>I have a detailed explanation of what I learned while working on this project in my <a href="http://dan.bravender.us/2009/6/28/Announcing_dongsa.net.html">blog entry announcing the site</a>.</p>
 <p>Give these a try: {{ samples }}.</p> 
