--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -4,6 +4,10 @@
 <meta name="verify-v1" content="nfSbiOgPUnEWsQ8h5APnRPOxK0HWpZtiMMHZZ+oaIZ4=" >
 <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
 <script type="text/javascript">
+$(document).ready(function() {
+    $('#infinitive').select();
+});
+
 function toggle(e) {
     $(e).parent().parent().next('.explanation').toggle();
     return false;
@@ -67,7 +71,7 @@ The verb "{{ infinitive }}" has both regular and irregular forms depending on it
 <tbody>
 <tr>
     <td class="tense">infinitive</td>
-    <td><input name="infinitive" size="10" value="{{ infinitive }}"></td>
+    <td><input id="infinitive" name="infinitive" size="10" value="{{ infinitive }}"></td>
     <td>
         <input type="submit" value="conjugate!">
         {% if both_regular_and_irregular %}
