Linking over to hanjadic to pull in Chinese etymology

--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -63,6 +63,9 @@ The verb "{{ infinitive }}" has both regular and irregular forms depending on it
 <div class="type">
 {{ infinitive }} is a {{ verb_type }}.
 </div>
+<div id="etymology">
+<script src="http://hanjadic.bravender.us/chinese_etymology?search={{infinitive}}"></script>
+</div>
 {% endif %}
 <table>
 <thead>
