Added comments for dongsa.net

--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -121,6 +121,7 @@ google_ad_height = 90;
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/dongsa/embed.js"></script><noscript><a href="http://disqus.com/forums/dongsa/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 <!-- Piwik -->
 <script type="text/javascript">
 var pkBaseURL = (("https:" == document.location.protocol) ? "https://dan.bravender.us/~dbravender/piwik/" : "http://dan.bravender.us/~dbravender/piwik/");
@@ -133,5 +134,19 @@ try {
 } catch( err ) {}
 </script>
 <!-- End Piwik Tag -->
+<script type="text/javascript">
+//<![CDATA[
+(function() {
+        var links = document.getElementsByTagName('a');
+            var query = '?';
+                for(var i = 0; i < links.length; i++) {
+                        if(links[i].href.indexOf('#disqus_thread') >= 0) {
+                                    query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+                                        }
+                                            }
+                                                document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/dongsa/get_num_replies.js' + query + '"></' + 'script>');
+})();
+//]]>
+</script>
 </body>
 </html>
