Made it so that people can close the Amazon ad

--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -47,6 +47,7 @@ table {
 </head>
 <body onscroll="$('#azn_srch')[0].style.top = $(document.body).scrollTop() > 200 ? $(document.body).scrollTop() : 200;">
 <div id="azn_srch" style="position: absolute; right: 0; top: 200px; margin-right: 10px;">
+<a href="#" onclick="$('#azn_srch').hide()" style="margin-right: auto; margin-left: auto">close</a><br/>
 <SCRIPT charset="utf-8" type="text/javascript" src="http://ws.amazon.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822/US/httpthebestbo-20/8002/a36d5a6f-bcb9-4db9-bf55-078d3b0958d0"> </SCRIPT> <NOSCRIPT><A HREF="http://ws.amazon.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Fhttpthebestbo-20%2F8002%2Fa36d5a6f-bcb9-4db9-bf55-078d3b0958d0&Operation=NoScript">Amazon.com Widgets</A></NOSCRIPT>
 </div>
 <p>dongsa.net shows you how to conjugate and pronounce Korean verbs</p>
