--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -129,7 +129,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/dongsa/embed.js"></script><noscript><a href="http://disqus.com/forums/dongsa/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 <!-- Piwik -->
 <script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://dan.bravender.us/~dbravender/piwik/" : "http://dan.bravender.us/~dbravender/piwik/");
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://piwik.bravender.us/" : "http://piwik.bravender.us/");
 document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script type="text/javascript">
 try {
