--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -69,7 +69,7 @@ The verb "{{ infinitive }}" does not appear to be a Korean verb. Dongsa.net only
 {{ infinitive }} is a {{ verb_type }}.
 </div>
 <div id="etymology">
-<script src="http://hanjadic.bravender.us/chinese_etymology?search={{infinitive}}"></script>
+<script src="http://hanjadic.bravender.us/chinese_etymology.php?search={{infinitive}}"></script>
 </div>
 {% endif %}
 <table>
