--- a/korean/templates/index.html
+++ b/korean/templates/index.html
@@ -48,6 +48,7 @@ table {
 <body>
 <p>dongsa.net shows you how to conjugate and pronounce Korean verbs</p>
 <p>I have a detailed explanation of what I learned while working on this project in my <a href="http://dan.bravender.us/2009/6/28/Announcing_dongsa.net.html">blog entry announcing the site</a>.</p>
+<p>There is now a dongsa.net Android app that doesn't require network access. You can read about it in the <a href="http://dan.bravender.us/2010/10/13/dongsa.net_Android_App.html">blog post</a> or you can <a href="http://dan.bravender.us/files/Dongsa.apk">download the app directly</a>.</p>
 <!-- AddThis Button BEGIN -->
 <a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=dbravender"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pub=dbravender"></script>
 <!-- AddThis Button END -->
