--- a/html/css/dongsa.css
+++ b/html/css/dongsa.css
@@ -31,3 +31,19 @@ dt {
 .warning {
     color: red;
 }
+
+#keyboard {
+    display: none;
+}
+
+button {
+    margin: 0;
+    padding: 0;
+}
+
+#keyboard button {
+    padding: 0;
+    padding-left: 1px;
+    margin: 0;
+    margin-right: 1px;
+}
