--- a/html/css/dongsa.css
+++ b/html/css/dongsa.css
@@ -8,6 +8,15 @@ dd, dt {
     padding-left: 5px;
 }
 
+ul, li {
+    padding-left: 5px;
+    margin: 0;
+}
+
+ul {
+    padding-bottom: 5px;
+}
+
 dd {
     text-transform: capitalize;
     display: block;
