--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ViewSwitcher
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view_switcher"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+<ListView
+    android:id="@+id/listview"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-    <WebView android:id="@+id/web_engine"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent" />
-</LinearLayout>
+    android:layout_height="fill_parent" />
+<WebView
+    android:id="@+id/webview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
+</ViewSwitcher>
